2008-06-11  Joseph Myers  <joseph@codesourcery.com>

	* config/arm/arm.c (arm_init_neon_builtins): Move initialization
	with function calls after declarations.  Lay out
	neon_float_type_node before further use.

2008-06-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36474
	* opts.c (decode_options): Set max-fields-for-field-sensitive
	parameter to 100 for -O2, -Os and -O3.
	* params.def (max-fields-for-field-sensitive): Set default to zero.
	* doc/invoke.texi (max-fields-for-field-sensitive): Document
	defaults.

2008-06-10  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/rs6000.c (build_opaque_vector_type): Set
	TYPE_CANONICAL for copied element type.

2008-06-09  Michael Meissner  <michael.meissner@amd.com>

	* config.gcc (i[34567]86-*-*): Put test in quotes to prevent
	failure on some Bourne shells.
	(x86_64-*-*): Ditto.

2008-06-07  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/34976
	* tree-loop-linear.c (try_interchange_loops): Look at size of
	caches: don't transform if the smallest stride is larger than
	the L2 cache, or if the largest stride multiplied by the number of
	iterations is smaller than the L1 cache.

2008-06-07  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-05-12  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/36111
	* recog.c (validate_replace_rtx_1): Unshare new RTL expression
	that was created for swappable operands.

2008-06-07  Andy Hutchinson  <hutchinsonandy@aim.com>

	PR target/27386
	* config/avr/avr.h: (PUSH_ROUNDING): Remove.
	
	PR target/30243
	* builtins.c (expand_builtin_signbit): Don't take lowpart when
	register is already smaller or equal to required mode. 	

	PR target/34932
	* config/avr/avr.md (*addhi3_zero_extend2): Remove.
	
	* config/avr/avr.h (MAX_OFILE_ALIGNMENT): Define.

	
2008-06-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36291
	* tree-flow. h (struct gimple_df): Remove var_anns member.